world_macros/tests/fails_if_name_empty.stderr
error: String cannot be empty
 --> tests/fails_if_name_empty.rs:5:24
  |
5 |     let _map = puzzle!("", "Author",
  |                        ^^
